// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TelegramButton adds a beforeClick function for the click handler 1`] = `
<styled.a
  activeColor="#005fa3"
  aria-label="Telegram"
  color="#0087CB"
  hoverColor="#0073b7"
  href="#"
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
>
  <TelegramIcon />
</styled.a>
`;

exports[`TelegramButton does render if boxShadow is true 1`] = `
<styled.a
  activeColor="#005fa3"
  aria-label="Telegram"
  boxShadow={true}
  color="#0087CB"
  hoverColor="#0073b7"
  href="#"
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
>
  <TelegramIcon />
</styled.a>
`;

exports[`TelegramButton does render if teaser are provided 1`] = `
<styled.a
  activeColor="#005fa3"
  aria-label="Telegram"
  color="#0087CB"
  hoverColor="#0073b7"
  href="#"
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
>
  <TelegramIcon />
</styled.a>
`;

exports[`TelegramButton does render if utmParams are provided 1`] = `
<styled.a
  activeColor="#005fa3"
  aria-label="Telegram"
  color="#0087CB"
  hoverColor="#0073b7"
  href="#"
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
>
  <TelegramIcon />
</styled.a>
`;

exports[`TelegramButton renders a round button 1`] = `
<styled.a
  activeColor="#005fa3"
  aria-label="Telegram"
  color="#0087CB"
  hoverColor="#0073b7"
  href="#"
  label="Telegram"
  onClick={[Function]}
  role="button"
  title=""
>
  <TelegramIcon />
</styled.a>
`;
